<resources>
    <string name="app_name">LifeStyle</string>
    <string name="action_settings">Settings</string>
    <string name="parse_app_id">KdsLvRhTcOwaI7g6DUSpmh5kMlvI9EYHobtd0Wxi</string>
    <string name="parse_client_id">w7UH4OKtYcdYJBNOYm2usz0AV7FXnA99Jxyoks8J</string>
    <string name="title_activity_risk">Riesgo</string>
    <string name="title_activity_result">Resultados</string>

    <string name="home_item">Inicio</string>
    <string name="perfil_item">Mi Perfil</string>
    <string name="especialista_item">Especialistas</string>
    <string name="foro_item">Foro</string>
    <string name="resultado_item">Mis Resultados</string>
    <string name="log_out_item">Cerrar Sesión</string>
    <string name="session_item">Sesión</string>

    <string name="action_previous">Anterior</string>
    <string name="action_next">Siguiente</string>
    <string name="action_finish">Finalizar</string>
    <string name="title_activity_logro">Logros</string>
    <string name="title_activity_ranking">Ranking</string>
    <string name="title_activity_editar">Editar Perfil</string>
    <string name="title_activity_ejercicio">Lista de Ejercicios</string>
    <string name="title_activity_dieta">Lista de Dietas</string>
    <string name="title_activity_doctor">Doctores</string>
    <string name="title_activity_detalle_doctor">Detalle Doctor</string>
    <string name="title_activity_detalle_tema">Temas</string>
    <string name="title_activity_detalle_mensaje">Comentarios</string>
</resources>

